--- a/vscode/custom-css.css
+++ b/vscode/custom-css.css
@@ -17,7 +17,7 @@ summary,
 .publisher,
 .version {
   font-family:
-    "Monaspace Krypton Var",
+    "Space Grotesk",
     -apple-system,
     sans-serif;
   font-size: 16px !important;
