--- a/vscode/custom-css.css
+++ b/vscode/custom-css.css
@@ -16,18 +16,18 @@ summary,
 .monaco-workbench,
 .publisher,
 .version {
-  font-family: "Space Grotesk", -apple-system, sans-serif;
+  font-family: "Monaspace Neon Var", -apple-system, sans-serif;
   font-size: 16px !important;
   letter-spacing: 0.01rem;
 }
-.monaco-workbench
+/* .monaco-workbench
   .activitybar
   > .content
   :not(.monaco-menu)
   > .monaco-action-bar
   .action-label.codicon {
   font-size: 24px !important;
-}
+} */
 .badge-content,
 .monaco-count-badge {
   font-size: 12px !important;
