--- a/vscode/custom-css.css
+++ b/vscode/custom-css.css
@@ -1,4 +1,4 @@
-a,
+/* a,
 code,
 h2,
 h3,
@@ -16,18 +16,18 @@ summary,
 .monaco-workbench,
 .publisher,
 .version {
-  font-family: "Monaspace Neon Var", -apple-system, sans-serif;
-  font-size: 16px !important;
+  font-family: "Arial", -apple-system, sans-serif;
+  font-size: 23px !important;
   letter-spacing: 0.01rem;
 }
-/* .monaco-workbench
+.monaco-workbench
   .activitybar
   > .content
   :not(.monaco-menu)
   > .monaco-action-bar
   .action-label.codicon {
   font-size: 24px !important;
-} */
+}
 .badge-content,
 .monaco-count-badge {
   font-size: 12px !important;
@@ -48,3 +48,8 @@ summary,
   font-size: 24px !important;
   font-weight: normal;
 }
+
+.title .name {
+        font-size: 24px !important;
+        font-weight: normal;
+} */
